@@ -11,3 +11,4 @@
 <color:22ffaa>v0.1.5 <color:999999>[04/09/2015] <color:ffffff>-- projectiles now last for infinity, stolen cubes play a sound to the original owner, how-to-play upon connecting
 <color:22ffaa>v0.1.6 <color:999999>[04/09/2015] <color:ffffff>-- bugfixes, changelog now its own command
 <color:22ffaa>v0.1.7 <color:999999>[04/09/2015] <color:ffffff>-- wins/losses now tracked and saved, corrected speed display
+<color:22ffaa>v0.1.8 <color:999999>[04/10/2015] <color:ffffff>-- bricks can now optionally help you fly up
